Fixed text wrapping issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -71,6 +71,6 @@
   }
 
   input {
-    width: 400px;
-    height: 200px;
+   /* width: 400px;
+    height: 200px;*/
   }
